// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opens drawer once mouse goes over sensor 1`] = `
<DocumentFragment>
  <div
    class="z-50 fixed duration-300 ease-in-out left-0 shadow-[10px_10px_15px_-3px_rgb(0_0_0_/_0.1),_10px_4px_6px_-4px_rgb(0_0_0_/_0.1)] p-4 bg-max-white dark:bg-night-black-300  translate-x-0"
  >
    <p>
      Some paragraph
    </p>
    <div
      class="absolute cursor-pointer duration-300 ease-in-out  right-0 translate-x-0 shadow-[10px_10px_15px_-3px_rgb(0_0_0_/_0.1),_10px_4px_6px_-4px_rgb(0_0_0_/_0.1)] p-4 bg-max-white dark:bg-night-black-300 rounded-r-lg"
    >
      <p
        class=" text-night-black dark:text-max-white font-body font-body text-base undefined"
      >
        OPEN
      </p>
    </div>
  </div>
  <div
    class="z-50 fixed left-0 w-4 h-screen"
    data-testid="mouseEnterSensor"
  />
</DocumentFragment>
`;

exports[`renders a fixed drawer 1`] = `
<DocumentFragment>
  <div
    class="z-50 fixed duration-300 ease-in-out left-0 shadow-[10px_10px_15px_-3px_rgb(0_0_0_/_0.1),_10px_4px_6px_-4px_rgb(0_0_0_/_0.1)] p-4 bg-max-white dark:bg-night-black-300  -translate-x-full"
  >
    <p>
      Some paragraph
    </p>
    <div
      class="absolute cursor-pointer duration-300 ease-in-out  right-0 translate-x-full shadow-[10px_10px_15px_-3px_rgb(0_0_0_/_0.1),_10px_4px_6px_-4px_rgb(0_0_0_/_0.1)] p-4 bg-max-white dark:bg-night-black-300 rounded-r-lg"
    >
      <p
        class=" text-night-black dark:text-max-white font-body font-body text-base undefined"
      >
        OPEN
      </p>
    </div>
  </div>
</DocumentFragment>
`;
